--- a/static/index.html
+++ b/static/index.html
@@ -1,11 +1,58 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Garra fischertecnik</title>
-    </head>
-    <body>
-        <h1>Garra fischertecnik</h1>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.5/socket.io.min.js"></script>
-        <script src="/index.js"></script> 
-    </body>
+<head>
+    <title>Garra fischertechnik</title>
+    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="language" content="pt-BR"> 
+</head>
+<body>
+    <div class="container">
+        <h1>Garra fischertechnik</h1>  
+        <div class="controls">
+            <h2>Controles:</h2>
+        </div>
+    
+        <div class="row">
+            <div class="key-groups">
+                <div class="key-group col">
+                    <p id="avancar">W - Avançar</p>
+                    <p id="recuar">S - Recuar</p>
+                    <p id="esticar">A - Esticar</p>
+                    <p id="retrair">D - Retrair</p>
+                    <div class="keys">
+                        <button id="avancar" data-key="w">W</button>
+                    </div>
+                    <div class="keys">
+                        <button id="esticar" data-key="a">A</button>
+                        <button id="recuar" data-key="s">S</button>
+                        <button id="retrair" data-key="d">D</button>
+                    </div>
+                </div>
+                <div class="key-group col"> 
+                    <p id="subir">I - Subir</p>
+                    <p id="descer">K - Descer</p>
+                    <p id="girar-esquerda">J - Girar para esquerda</p>
+                    <p id="girar-direita">L - Girar para direita</p>
+                    <div class="keys">
+                        <button id="subir" data-key="i">I</button>
+                    </div>
+                    <div class="keys">
+                        <button id="girar-esquerda" data-key="j">J</button>
+                        <button id="descer" data-key="k">K</button>
+                        <button id="girar-direita" data-key="l">L</button>
+                    </div>               
+                </div>
+            </div>
+        </div>
+        <div class="status">
+            <h2>Status da Garra:</h2>
+            <p id="status">Funcional, exceto pelo movimento de subir e descer</p>
+        </div>
+    </div>
+    
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.5/socket.io.min.js"></script>
+    <script src="index.js"></script>
+</body>
 </html>
