Ajustes pequenos na interface html

--- a/static/index.html
+++ b/static/index.html
@@ -30,8 +30,12 @@
                     </div>
                 </div>
                 <div class="key-group col"> 
-                    <p id="subir">I - Subir</p>
-                    <p id="descer">K - Descer</p>
+                    <p id="subir">
+                        <s>I - Subir</s>
+                    </p>
+                    <p id="descer">
+                        <s>K - Descer</s>
+                    </p>
                     <p id="girar-esquerda">J - Girar para esquerda</p>
                     <p id="girar-direita">L - Girar para direita</p>
                     <div class="keys">
@@ -47,7 +51,7 @@
         </div>
         <div class="status">
             <h2>Status da Garra:</h2>
-            <p id="status">Funcional, exceto pelo movimento de subir e descer</p>
+            <p id="status">Funcional, <mark>exceto pelo movimento de subir e descer</mark></p>
         </div>
     </div>
     
